# Taller-2-TD3

./: CMakeLists.txt  lista.h  main.cpp  test_parte1.cpp  test_parte2.cpp  test_parte3.cpp  test_parte4.cpp  test_parte5.cpp
